# ClassroomNetControl

./: .env.example  .gitignore  README.md  pyproject.toml
apps/CmncWanWidget/: ApiClient.cs  App.xaml  App.xaml.cs  CmncWanWidget.csproj  DesktopWidgetHost.cs  JsonHelpers.cs  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  appsettings.json.example
apps/CmncWanWidget/Api/: ApiClient.cs
apps/CmncWanWidget/Persistence/: WidgetPositionStore.cs
apps/CmncWanWidget/Views/: MainWindow.xaml  MainWindow.xaml.cs
apps/CmncWanWidget/Windows/: StartupManager.cs  WindowMinimizeGuard.cs
apps/cmnc-web/: Dockerfile  default.conf.template  index.html  nginx.conf  package-lock.json  package.json
apps/cmnc-web/src/: App.css  App.tsx  api.ts  main.tsx  styles.css
apps/cmnc-web/src/auth/: permissions.ts
apps/cmnc-web/src/components/ClassroomCameraPanel/: ClassroomCameraPanel.css  ClassroomCameraPanel.tsx
apps/cmnc-web/src/components/ClassroomCamerasAdminPanel/: ClassroomCamerasAdminPanel.css  ClassroomCamerasAdminPanel.tsx
apps/cmnc-web/src/components/ClassroomFormModal/: ClassroomFormModal.css  ClassroomFormModal.tsx
apps/cmnc-web/src/components/ClassroomTabs/: ClassroomTabs.css  ClassroomTabs.tsx
apps/cmnc-web/src/components/DeviceCard/: DeviceCard.css  DeviceCard.tsx
apps/cmnc-web/src/components/DeviceFormModal/: DeviceFormModal.css  DeviceFormModal.tsx
apps/cmnc-web/src/components/DeviceGrid/: DeviceGrid.css  DeviceGrid.tsx
apps/cmnc-web/src/components/DynamicDevicesTable/: DynamicDevicesTable.css  DynamicDevicesTable.tsx
apps/cmnc-web/src/components/PinObservedDeviceModal/: PinObservedDeviceModal.css  PinObservedDeviceModal.tsx
apps/cmnc-web/src/components/Topbar/: Topbar.css  Topbar.tsx
apps/cmnc-web/src/pages/AccountPage/: AccountPage.css  AccountPage.tsx
apps/cmnc-web/src/pages/AdminAccessPage/: AdminAccessPage.css  AdminAccessPage.tsx
apps/cmnc-web/src/pages/LoginPage/: LoginPage.css  LoginPage.tsx
apps/cmnc-web/src/pages/MaintenancePage/: MaintenancePage.css  MaintenancePage.tsx
apps/cmnc-web/src/pages/RoutersAdminPage/: RoutersAdminPage.css  RoutersAdminPage.tsx
apps/cmnc-web/src/styles/: global.css
apps/cmnc-web/src/utils/: devices.ts  forms.ts
docs/: compose depends.drawio
infra/: docker-compose.yml
infra/postgres/initdb/: 01-create-databases.sql
libs/cmnc-contracts/: pyproject.toml
libs/cmnc-contracts/src/cmnc_contracts/: __init__.py  enums.py  events.py  exchanges.py  permissions.py  routing_keys.py
scripts/: compose-up.sh  update-build-info.sh
services/cmnc-api-gateway/: Dockerfile  pyproject.toml
services/cmnc-api-gateway/src/cmnc_api_gateway/: clients.py  main.py  schemas.py  settings.py
services/cmnc-auth-service/: Dockerfile  alembic.ini  pyproject.toml
services/cmnc-auth-service/migrations/: env.py
services/cmnc-auth-service/migrations/versions/: 20260614_0001_initial.py  20260614_0002_remove_role_level.py
services/cmnc-auth-service/src/cmnc_auth_service/: bootstrap.py  db.py  main.py  models.py  schemas.py  security.py  settings.py
services/cmnc-camera-service/: Dockerfile  pyproject.toml
services/cmnc-camera-service/src/cmnc_camera_service/: main.py  schemas.py  session_store.py  settings.py
services/cmnc-classroom-service/: Dockerfile  alembic.ini  pyproject.toml
services/cmnc-classroom-service/migrations/: env.py
services/cmnc-classroom-service/migrations/versions/: 20260613_0001_initial_classroom_schema.py  20260613_0002_add_wan_protected.py  20260618_0003_add_classroom_is_service.py  20260624_0004_add_classroom_rtsp_streams.py  20260624_0005_create_classroom_cameras.py  20260624_0006_drop_classroom_rtsp_fields.py  20260626_0007_add_classroom_router_id.py
services/cmnc-classroom-service/src/cmnc_classroom_service/: api.py  db.py  main.py  messaging.py  models.py  policy_sync_handlers.py  schemas.py  settings.py
services/cmnc-inventory-service/: Dockerfile  alembic.ini  pyproject.toml
services/cmnc-inventory-service/migrations/: env.py
services/cmnc-inventory-service/migrations/versions/: 20260613_0001_initial_inventory_schema.py  20260626_0002_create_routers_and_status.py  20260626_0003_fix_router_sequences.py  20260626_0004_add_router_api_verify_tls.py
services/cmnc-inventory-service/src/cmnc_inventory_service/: db.py  dhcp_handlers.py  main.py  messaging.py  models.py  schemas.py  settings.py
services/cmnc-maintenance-service/: Dockerfile  pyproject.toml
services/cmnc-maintenance-service/src/cmnc_maintenance_service/: docker_client.py  main.py  schemas.py  settings.py
services/cmnc-mikrotik-poller-service/: Dockerfile  pyproject.toml
services/cmnc-mikrotik-poller-service/src/cmnc_mikrotik_poller_service/: healthcheck.py  inventory_client.py  main.py  messaging.py  mikrotik_client.py  normalizers.py  settings.py
services/cmnc-policy-sync-service/: Dockerfile  pyproject.toml
services/cmnc-policy-sync-service/src/cmnc_policy_sync_service/: classroom_client.py  healthcheck.py  inventory_client.py  main.py  messaging.py  mikrotik_client.py  schemas.py  settings.py
