[project]
name = "cmnc-api-gateway"
version = "0.1.0"
description = "API gateway for ClassroomMikrotikNetControl"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.13.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "cmnc-contracts",
]

[tool.uv.sources]
cmnc-contracts = { workspace = true }

[project.scripts]
cmnc-api-gateway = "cmnc_api_gateway.main:run"

[build-system]
requires = ["uv_build>=0.9.0,<0.12.0"]
build-backend = "uv_build"