[project]
name = "cmnc-auth-service"
version = "0.1.0"
description = "Auth service stub for ClassroomMikrotikNetControl"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.13.1",
    "cmnc-contracts",
]

[tool.uv.sources]
cmnc-contracts = { workspace = true }

[project.scripts]
cmnc-auth-service = "cmnc_auth_service.main:run"

[build-system]
requires = ["uv_build>=0.9.0,<0.12.0"]
build-backend = "uv_build"