[project]
name = "cmnc-maintenance-service"
version = "0.1.0"
description = "Maintenance service for ClassroomMikrotikNetControl"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.13.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
]

[project.scripts]
cmnc-maintenance-service = "cmnc_maintenance_service.main:run"

[build-system]
requires = ["uv_build>=0.9.0,<0.12.0"]
build-backend = "uv_build"
