[project]
name = "cmnc-mikrotik-poller-service"
version = "0.1.0"
description = "MikroTik poller service for ClassroomMikrotikNetControl"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.13.1",
    "httpx>=0.28.1",
    "aio-pika>=9.6.2",
    "cmnc-contracts",
]

[tool.uv.sources]
cmnc-contracts = { workspace = true }

[project.scripts]
cmnc-mikrotik-poller-service = "cmnc_mikrotik_poller_service.main:run"

[build-system]
requires = ["uv_build>=0.9.0,<0.12.0"]
build-backend = "uv_build"
